fixed request to accept field isbn as Array instead of string with single id, updated tests to work properly
