# app/storage/api-docs/api-docs.json
@@ -35,12 +35,17 @@
                         }
                     },
                     {
-                        "name": "isbn",
+                        "name": "isbn[]",
                         "in": "query",
                         "description": "Filter by ISBN",
                         "required": false,
+                        "style": "form",
+                        "explode": true,
                         "schema": {
-                            "type": "string"
+                            "type": "array",
+                            "items": {
+                                "type": "string"
+                            }
                         }
                     },
                     {
@@ -60,9 +65,39 @@
                             "application/json": {
                                 "schema": {
                                     "properties": {
-                                        "data": {
+                                        "status": {
+                                            "type": "string",
+                                            "example": "OK"
+                                        },
+                                        "num_results": {
+                                            "type": "integer",
+                                            "example": 2
+                                        },
+                                        "results": {
                                             "type": "array",
                                             "items": {
+                                                "properties": {
+                                                    "title": {
+                                                        "type": "string",
+                                                        "example": "11/22/63"
+                                                    },
+                                                    "author": {
+                                                        "type": "string",
+                                                        "example": "Stephen King"
+                                                    },
+                                                    "description": {
+                                                        "type": "string",
+                                                        "example": "An English teacher travels back to 1958..."
+                                                    },
+                                                    "contributor": {
+                                                        "type": "string",
+                                                        "example": "by Stephen King"
+                                                    },
+                                                    "publisher": {
+                                                        "type": "string",
+                                                        "example": "Pocket Books"
+                                                    }
+                                                },
                                                 "type": "object"
                                             }
                                         }
@@ -74,6 +109,9 @@
                     },
                     "403": {
                         "description": "Unauthorized access"
+                    },
+                    "422": {
+                        "description": "Validation Error"
                     }
                 }
             }
